🎤⚾️ Checkpoint ./views/dataTable.html:44341290/294

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -120,20 +120,21 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button onclick="deleteTutor(data[i])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = data[i].id onclick="deleteTutor(this.value)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
     }
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
-    async function deleteTutor(tutor){
+    async function deleteTutor(idTutor){
       //opzioni per la fetch
       const options = {
         method: 'DELETE'
       };
+      console.log(idTutor);
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ tutor.id, options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ idTutor, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
@@ -143,7 +144,7 @@
         //invio al client la risposta sotto formato json
         response.json();
       })
-      then(data =>{
+      .then(data =>{
         if(data > 0){
           myArray = data;
           buildTable(myArray);
