🚉🍇 Checkpoint ./views/dataTable.html:44341290/764 ./public/table.css:44341290/34

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -40,6 +40,20 @@
       </table>
     </form>
     
+    <! Calcellazione di un nuovo tutor nel database>
+    <div class = "delete-tutor">
+      <h2>
+        Calcellazione dati Tutor
+      </h2>
+    
+      <form action="" id="deleteTutor">
+        <label for= "search"> ID Tutor</label><br>
+        <input type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor" >
+        <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
+      </form>
+    </div>
+    <hr>
+    
   </body>
 
   <script>
