--- a/public/table.css
+++ b/public/table.css
@@ -1,6 +1,9 @@
 body{
   display: grid;
   grid-gap: 1em;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
+  min-height: 100vh;
 	margin:0;
 	padding:20px;
 	font-family: sans-serif;
@@ -29,5 +32,9 @@ body{
 
 .table tbody tr:nth-child(even){
 	background-color: #f5f5f5;
+}
+
+.inner-block{
+  grid-row: span 2;
 }
 
