--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -12,7 +12,7 @@
   
   <body>
     <form id="searchTutor">
-      <div class = "inner_block">
+      <div class = "inner-block">
         <div class = "search_bar">
           <!label for= "search" Cerca Tutor<!/label><br>
           <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
