--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -52,7 +52,26 @@
         <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
       </form>
     </div>
-    <hr>
+    
+    <! Aggiornamento tutor dati tutor>
+    <h2>
+      Aggiornamento dati Tutor
+    </h2>
+    <form action = "" id = "updateTutor">
+      <div>
+        <label for="id">ID Tutor</label><br>
+        <input type="number" id="id" name="id" placeholder = "Inserisci ID tutor" >
+      </div><br>
+      <div>
+        <div>
+          <label for="id">Modifica</label>
+          <button type="button" id="filterByEmail" onclick= "setEmailFilter()">Email</button>
+          <button type="button" id="filterByExam" onclick= "setExamFilter()">Nuovo Esame</button>
+        </div>
+        <input type="text" id="valore" name="valore" placeholder = "Inserisci modifica" >
+        <button type="button" id="changeValue" onclick= "updateTutor()" >Modifica</button>
+      </div>
+    </form>
     
   </body>
 
