--- a/public/table.css
+++ b/public/table.css
@@ -1,8 +1,8 @@
 body{
   display: grid;
   grid-gap: 1em;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto auto;
   min-height: 100vh;
 	margin:0;
 	padding:20px;
@@ -16,6 +16,7 @@ body{
 .table{
 	width: 100%;
 	border-collapse: collapse;
+  grid-row: span 2;
 }
 
 .tableThead td,.table th{
