--- a/public/table.css
+++ b/public/table.css
@@ -1,7 +1,7 @@
 body{
   display: grid;
   grid-gap: 1em;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto;
   grid-template-rows: auto auto;
   min-height: 100vh;
 	margin:0;
@@ -13,10 +13,11 @@ body{
 	box-sizing: border-box;
 }
 
-.table{
+.search-tutor{
+  grid-area: ricerca;
 	width: 100%;
 	border-collapse: collapse;
-  grid-row: span 2;
+  grid-column: span 2;
 }
 
 .tableThead td,.table th{
@@ -35,7 +36,13 @@ body{
 	background-color: #f5f5f5;
 }
 
-.inner-block{
-  grid-row: span 2;
+.delete-tutor{
+  grid-area: cancella;
 }
+
+.update-tutor{
+  grid-area: aggiorna;
+}
+
+
 
