--- a/public/table.css
+++ b/public/table.css
@@ -1,8 +1,11 @@
 body{
   display: grid;
   grid-gap: 1em;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr 200;
   grid-template-rows: auto auto;
+  grid-template-areas:
+    "ricerca cancella"
+    "ricerca  aggiorna";
   min-height: 100vh;
 	margin:0;
 	padding:20px;
@@ -17,7 +20,6 @@ body{
   grid-area: ricerca;
 	width: 100%;
 	border-collapse: collapse;
-  grid-column: span 2;
 }
 
 .tableThead td,.table th{
