--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -14,7 +14,9 @@
     <div class = "search-tutor">
       <form id="searchTutor">
         <div class = "search_bar">
-          <!label for= "search" Cerca Tutor<!/label><br>
+          <h2>
+            Cerca un Tutor
+          </h2>
           <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
           <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
           <input type="button" onclick="setFilter(1)" value="Nome" />
