--- a/public/table.css
+++ b/public/table.css
@@ -2,10 +2,11 @@ body{
   display: grid;
   grid-gap: 1em;
   grid-template-columns: 1fr 200;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   grid-template-areas:
+    "ricerca aggiungi"
     "ricerca cancella"
-    "ricerca  aggiorna";
+    "ricerca aggiorna";
   min-height: 100vh;
 	margin:0;
 	padding:20px;
@@ -44,6 +45,10 @@ body{
 
 .update-tutor{
   grid-area: aggiorna;
+}
+
+.add-tutor{
+  grid-area: aggiungi;
 }
 
 h2{
