--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -75,7 +75,7 @@
         </form>
     </div> 
     
-    <! Calcellazione di un nuovo tutor nel database>
+    <! Calcellazione di un tutor nel database>
     <div class = "delete-tutor">
       <h2>
         Calcellazione dati Tutor
@@ -233,19 +233,20 @@
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
+      sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
       //opzioni per la fetch
       const options = {
         method: 'DELETE'
       };
-      console.log(idTutor);
+      console.log(sessionStorage.idTutor);
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ idTutor, options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ sessionStorage.idTutor, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
           return response.json();
         }
-        alert('ERROR '+ response.status +'! Something went wrong!');
+        alert('ERROR '+ response.status +'! Id inserito non esiste!');
         //invio al client la risposta sotto formato json
         response.json();
       })
@@ -259,6 +260,8 @@
       .catch(e => {
           console.log(e);
       });
+      //pulisce la form
+      document.getElementById("deleteTutor").reset();
     }
     
     //FUNZIONE PER MODIFICARE UN TUTOR 
