🚙🍮 Checkpoint ./views/dataTable.html:44341290/429

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -192,9 +192,9 @@
         alert('ERROR!Something went wrong!');
       })
       .then(data =>{
-        myArray = data;
-        console.log(myArray);
-        if(myArray.lenght != 0){
+        if(data > 0){
+          myArray = data;
+          console.log(myArray);
           buildTable(myArray);
         }
       })
@@ -251,9 +251,9 @@
         response.json();
       })
       .then(data =>{
-        myArray = data;
-        console.log(myArray);
-        if(myArray.lenght != 0){
+        if(data > 0){
+          myArray = data;
+          console.log(myArray);
           buildTable(myArray);
         }
       })
