--- a/public/table.css
+++ b/public/table.css
@@ -53,7 +53,7 @@ body{
 
 h2{
   text-align: center;
-  background-color: darkblue;
+  vertical-align: middle;;
   font-family: sans-serif;
   color: #ffffff
 }
