--- a/public/table.css
+++ b/public/table.css
@@ -53,13 +53,14 @@ body{
 
 h2{
   text-align: center;
-  vertical-align: middle;;
+  background-color: darkblue;
   font-family: sans-serif;
   color: #ffffff
 }
 
 button{
   vertical-align: middle;
+  color: darkblue;
 }
 
 .input {
