--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -17,8 +17,10 @@
           <h2>
             Cerca un Tutor
           </h2>
-          <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
-          <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+          <div class = "search-tab">
+            <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
+           <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+          </div>
           <button type="button" id="filterByName" onclick="setFilter(1)">Nome</button>
           <button type="button" id="filterBySurname" onclick="setFilter(4)">Cognome</button>
           <button type="button" id="filterByUni" onclick="setFilter(2)">Università</button>
