--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -17,7 +17,7 @@
           <h2>
             Cerca un Tutor
           </h2>
-          <div class = "search-tab">
+          <div class = "tab">
             <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
            <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
           </div>
@@ -53,7 +53,7 @@
       </h2>
 
       <form action="" id="addTutor">
-        <div>
+        <div class="tab">
           <label for="name">Nome</label>
           <input class = "input" type="text" id="name" name="name" placeholder = "Nome" >
         </div>
