--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -45,6 +45,17 @@
       </form>
     </div>
     
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+
+    </div>
+    
     <! Aggiunta di un nuovo tutor nel database>
     <div class = "add-tutor">
       <h2>
@@ -249,7 +260,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button value = data[i].id onclick="deleteTutor(this.value)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = data[i].id onclick =  <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -329,6 +340,32 @@
       }
       //pulisce la form
       document.getElementById("updateTutor").reset();
+    }
+    
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on the button, open the modal
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
     }
     
     function setExamFilter(){
