--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -51,7 +51,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <p id = "modal-esami"></p>
       </div>
 
     </div>
@@ -260,7 +260,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button value = data[i].id onclick =  <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button id = "esami" value = i  <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -346,14 +346,16 @@
     var modal = document.getElementById("myModal");
 
     // Get the button that opens the modal
-    var btn = document.getElementById("myBtn");
+    var btn = document.getElementById("esami");
 
     // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
 
     // When the user clicks on the button, open the modal
     btn.onclick = function() {
+      var modal_esami = document.getElementById('modal-esami')
       modal.style.display = "block";
+      modal_esami.innerHTML += myArray[btn.value].esami;
     }
 
     // When the user clicks on <span> (x), close the modal
