--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -249,7 +249,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button id = "esami" value = i  <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = data[i].id onclick="deleteTutor(this.value)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -329,34 +329,6 @@
       }
       //pulisce la form
       document.getElementById("updateTutor").reset();
-    }
-    
-    // Get the modal
-    var modal = document.getElementById("myModal");
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("esami");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on the button, open the modal
-    btn.onclick = function() {
-      var modal_esami = document.getElementById('modal-esami')
-      modal.style.display = "block";
-      modal_esami.innerHTML += myArray[btn.value].esami;
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-      modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
     }
     
     function setExamFilter(){
