--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -249,7 +249,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button value = data[i].id onclick="deleteTutor(this.value)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = i onclick="displayExams(1)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -329,6 +329,10 @@
       }
       //pulisce la form
       document.getElementById("updateTutor").reset();
+    }
+    
+    function displayExam(){
+      alert(myArray[i].esami);
     }
     
     function setExamFilter(){
