🍂🎂 Checkpoint ./views/dataTable.html:44341290/1022

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -27,7 +27,7 @@
           </div> 
         </div>  
         <br>
-        <table class = "table" id = "tableThead">
+        <table class = "table">
             <tr>
               <th>ID</th>
               <th>Nome</th>
@@ -43,6 +43,21 @@
             </tbody>
         </table>
       </form>
+    </div>
+    
+    <!-- The Modal -->
+    <div id="modal-exams" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <table class = "table" id = "table">
+            <tbody id="table-exams">
+
+            </tbody>
+        </table>
+      </div>
+
     </div>
     
     <! Aggiunta di un nuovo tutor nel database>
