🏭🐒 Checkpoint ./views/dataTable.html:44341290/25

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -27,7 +27,7 @@
           </div> 
         </div>  
         <br>
-        <table class = "table">
+        <table class = "table" id= "tableThead">
             <tr>
               <th>ID</th>
               <th>Nome</th>
