--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -27,7 +27,7 @@
           </div> 
         </div>  
         <br>
-        <table class = "table" id= "tableThead">
+        <table class = "table" id = "tableThead">
             <tr>
               <th>ID</th>
               <th>Nome</th>
@@ -43,21 +43,6 @@
             </tbody>
         </table>
       </form>
-    </div>
-    
-    <!-- The Modal -->
-    <div id="modal-exams" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <table class = "table" id = "table">
-            <tbody id="table-exams">
-
-            </tbody>
-        </table>
-      </div>
-
     </div>
     
     <! Aggiunta di un nuovo tutor nel database>
@@ -264,7 +249,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button id = "showExams" onclick="displayExams()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = i onclick="displayExams()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -344,32 +329,6 @@
       }
       //pulisce la form
       document.getElementById("updateTutor").reset();
-    }
-    
-    // Get the modal
-    var modal = document.getElementById("modal-exams");
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("showExams");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on the button, open the modal
-    btn.onclick({
-      modal.style.display = "block";
-    });
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-      modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
     }
     
     function setExamFilter(){
