📼💿 Checkpoint ./views/dataTable.html:44341290/455

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -255,9 +255,9 @@
       }
     }
     
-    $("showExams").click( function() {
+    $("button").click( function() {
        alert($(this).closest('tr').index());
-    });
+    })
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
