--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -35,7 +35,7 @@
               <th>Email</th>
               <th>Università</th>
               <th>Corso</th>
-              <th>Esami</th>
+              <!th>Esami<!/th>
             </tr>
 
             <tbody id="myTable">
@@ -249,15 +249,11 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button id="showExams" onclick="displayExams()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <!td><!button id="showExams" onclick="displayExams()" <!i class="material-symbols-outlined"> <!keyboard_double_arrow_right>
               </tr>`
         table.innerHTML += row;
       }
     }
-    
-    $("button").click( function() {
-       alert($(this).closest('tr').index());
-    })
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
