--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -249,7 +249,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button id="showExams" onclick="displayExams()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button value = "i" id="showExams" onclick="displayExams(this.value)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -332,7 +332,7 @@
     }
     
     async function displayExams(i){
-      alert(myArray[i].esami);
+      alert(i);
     }
     
     function setExamFilter(){
