🎟🌉 Checkpoint ./views/dataTable.html:44341290/50

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -331,7 +331,7 @@
       document.getElementById("updateTutor").reset();
     }
     
-    async function displayExams(element){
+    function displayExams(element){
       if(element.esami.length != 0){
         alert(element.esami);
       }
