🎆💷 Checkpoint ./views/dataTable.html:44341290/158 ./public/table.css:44341290/229

--- a/public/table.css
+++ b/public/table.css
@@ -66,6 +66,19 @@ button{
   outline: none;
 }
 
+button.selected{
+  color:black;
+  font-weight: bold;
+}
+
+button .icon-button{
+  vertical-align: middle;
+  color: black;
+  background: none;
+  border: none;
+  outline: none;
+}
+
 .input {
   font-size: 16px;
   font-size: Max(16px, 1em);
