--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -249,7 +249,7 @@
                 <td>${data[i].email}</td>
                 <td>${data[i].universita}</td>
                 <td>${data[i].corso}</td>
-                <td><button value = ${i} id="showExams" onclick="displayExams(myArray[this.value])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button type="button" value = ${i} id="showExams" onclick="displayExams(myArray[this.value])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row;
       }
@@ -349,6 +349,11 @@
       sessionStorage.setItem("filtroEmail", !filtroEmail);
       sessionStorage.setItem("action", "newEmail");
     }
+    
+    $('button').on('click', function(){
+      $('button').removeClass('selected');
+      $(this).addClass('selected');
+});
 
   </script>
   
