completamento finestra esami tutor

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -23,7 +23,7 @@
           <button type="button" id="filterByCourse" onclick="setFilter(3)">Corso</button>
           <div class = "tab">
             <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
-           <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+           <button type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
           </div> 
         </div>  
         <br>
