--- a/views/home.html
+++ b/views/home.html
@@ -4,172 +4,155 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/home.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/table.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap'); </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>     
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
-
+  
   <body>
-    <h1>Tutoring Università</h1>
-    <h2>
-      Ricerca un Tutor Adatto a Te
-    </h2>
-    
-    <div>
-      <label for= "search"> Cerca Tutor</label><br>
-      <input class = "searchBar" type = "text" id = "researchValue" placeholder = "Cerca">
-      <button class = "btnSearch" type="button" id="btnSearch" onclick="searchTutors()"> <i class="material-icons">person_search</i></button>
+    <div class = "search-tutor">
+      <form id="searchTutor">
+        <div class = "search-bar">
+          <h2>
+            Cerca un Tutor
+          </h2>
+          <button type="button" id="filterByName" onclick="setFilter(1)">Nome</button>
+          <button type="button" id="filterBySurname" onclick="setFilter(4)">Cognome</button>
+          <button type="button" id="filterByUni" onclick="setFilter(2)">Università</button>
+          <button type="button" id="filterByCourse" onclick="setFilter(3)">Corso</button>
+          <div class = "tab">
+            <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
+           <button type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+          </div> 
+        </div>  
+        <br>
+        <table class = "table" id = "tableThead">
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>Cognome</th>
+              <th>Email</th>
+              <th>Università</th>
+              <th>Corso</th>
+              <th>Esami</th>
+            </tr>
+
+            <tbody id="myTable">
+
+            </tbody>
+        </table>
+      </form>
     </div>
-    <br>
     
     <! Aggiunta di un nuovo tutor nel database>
-    <hr> 
-    <h2>
-      Registra un nuovo Tutor
-    </h2>
+    <div class = "add-tutor">
+      <h2>
+        Registra un nuovo Tutor
+      </h2>
 
-    <form action="" id="addTutor">
-      <div>
-        <label for="name">Nome</label>
-        <input type="text" id="name" name="name" >
-      </div>
-      <div>
-        <label for="surname">Cognome</label>
-        <input type="text" id="surname" name="name" >
-      </div>
-      <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" >
-      </div>
-      <div>
-        <label for="universita">Università</label>
-        <input list="nome-università" name="universita" id="universita">
-        <!input list="nome-universita" id="universita" name="universita" autocomplete= "on">
-      </div>
-      <div>
-          <label for="corso">Corso di Studi</label>
-          <input type="text" id="corso" name="corso" >
+      <form action="" id="addTutor">
+        <div>
+          <label for="name">Nome</label>
+          <div class = "tab">
+            <input class = "input" type="text" id="name" name="name" placeholder = "Nome" >
+          </div>
         </div>
         <br>
-        <button type="button" id="newValue" onclick= "addTutor()" >Aggiungi</button>
+        <div>
+          <label for="surname">Cognome</label>
+          <div class = "tab">
+           <input class = "input" type="text" id="surname" name="name" placeholder = "Cognome">
+          </div>
+        </div>
+        <br>
+        <div>
+          <label for="email">Email</label>
+          <div class = "tab">
+           <input class = "input" type="email" id="email" name="email" placeholder = "Email">
+          </div>
+        </div>
+        <br>
+        <div>
+          <label for="universita">Università</label>
+          <div class = "tab">
+           <input class = "input" list="nome-università" name="universita" id="universita" placeholder = "Università">
+          </div>
+        </div>
+        <br>
+        <div>
+          <label for="corso">Corso di studi</label>
+          <div class = "tab">
+           <input class = "input" type="text" id="corso" name="corso" placeholder = "Corso di studi">
+          </div>
+          <button type="button" id="newValue" onclick= "addTutor()"> <i class="material-symbols-outlined">add</i></button>
+        </div>
       </form>
-      <hr>
+    </div> 
     
-    <! Calcellazione di un nuovo tutor nel database>
-    <div>
+    <! Calcellazione di un tutor nel database>
+    <div class = "delete-tutor">
       <h2>
         Calcellazione dati Tutor
       </h2>
-    </div>
-
-    <div>
+    
       <form action="" id="deleteTutor">
         <label for= "search"> ID Tutor</label><br>
-        <input type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor" >
-        <button type="button" id="deleteValue" onclick= "deleteTutor()" >Cancella</button>
+        <div class = "tab">
+          <input class = "input" type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor">
+         <button type="button" id="deleteValue" onclick= "deleteTutor()" ><i class="material-symbols-outlined">delete</i></button>
+        </div>
       </form>
     </div>
     <hr>
     
     <! Aggiornamento tutor dati tutor>
-    <h2>
-      Aggiornamento dati Tutor
-    </h2>
-    <form action = "" id = "updateTutor">
-      <div>
+    <div class = "update-tutor">
+      <h2>
+        Aggiornamento dati Tutor
+      </h2>
+      <form id = "updateTutor">
         <label for="id">ID Tutor</label><br>
-        <input type="number" id="id" name="id" placeholder = "Inserisci ID tutor" >
-      </div><br>
-      <div>
+        <div class = "tab">
+          <input class = "input" id="id" name="id" placeholder = "Inserisci ID tutor" >
+        </div>
+        <br>
         <div>
           <label for="id">Modifica</label>
           <button type="button" id="filterByEmail" onclick= "setEmailFilter()">Email</button>
           <button type="button" id="filterByExam" onclick= "setExamFilter()">Nuovo Esame</button>
         </div>
-        <input type="text" id="valore" name="valore" placeholder = "Inserisci modifica" >
-        <button type="button" id="changeValue" onclick= "updateTutor()" >Modifica</button>
-      </div>
-    </form>
+        <div class = "tab">
+          <input class = "input" type="text" id="valore" name="valore" placeholder = "Inserisci modifica" >
+          <button type="button" id="changeValue" onclick= "updateTutor()" ><i class="material-symbols-outlined">change_circle</i></button>
+        </div>
+      </form>
+    </div>
     
   </body>
-  
-  
-  
+
   <script>
+    var myArray = []
     const filtroEsame   = false;
     const filtroEmail   = false;
-    const filtroNome    = false;
-    const filtroCognome = false;
-    const filtroUni     = false;
-    const filtroCorso   = false;
-    sessionStorage.setItem("action","");
-
-    //FUNZIONE PER RICERCARE UN TUTOR
-    async function searchTutors(){
-      const searchValue = document.getElementById("searchValue").value;
-      
-      if(!searchValue){
-        alert("Inserire uno tutor.");
-        return;
+    
+    //valori di default nel momento del caricamento della pagina
+    localStorage.setItem("defaultFilter", 0);
+    localStorage.setItem("defaultSearchValue", " ");
+    
+    sessionStorage.setItem("filter", localStorage.defaultFilter);
+    sessionStorage.setItem("searchValue", "none ");
+    
+    $.ajax({
+      method:'GET',
+      url:'https://progetto-piattaforme-territorio.glitch.me/printAll' ,
+      success: function(response){
+        myArray = response;
+        buildTable(myArray);
+        console.log(myArray)
       }
-      
-      //opzioni per la fetch
-      const options = {
-        method: 'GET',
-        headers: {
-        'Content-Type': 'application/json',
-        }
-      };
-      
-      //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutor', options)
-      .then((response) => {
-        if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          return response.json();
-        }
-        alert('ERROR!Something went wrong!');
-      })
-      .catch(e => {
-          console.log(e);
-      });
-      //pulisce la form
-      document.getElementById("addTutor").reset();
-    }
+    })
     
-    //FUNZIONE PER MODIFICARE UN TUTOR
-    function setFiltroNome(){
-      let set = !filtroNome;
-      return set;
-    }
-    
-    function setFiltroCognome(){
-      let set = !filtroCognome;
-      return set;
-    }
-    
-    function setEmailFilter(){
-      sessionStorage.setItem("filtroEmail", !filtroEmail);
-      sessionStorage.setItem("action", "newEmail");
-    }
-    
-    function setFiltroUniversita(){
-      let set = !filtroUniversita;
-      return set;
-    }
-    
-    function setFiltroCorso(){
-      let set = !filtroCorso;
-      return set;
-    }
-    
-    function setExamFilter(){
-      sessionStorage.setItem("filtroEsame", !filtroEsame);
-      sessionStorage.setItem("action", "newExam");
-    }
-  
     //FUNZIONE PER AGGIUNGERE UN TUTOR
     async function addTutor(){
       //definisco i dati del nuovo tutor aggiungendo alcuni campi di default
@@ -199,49 +182,22 @@
         }
         alert('ERROR!Something went wrong!');
       })
+      .then(data =>{
+        myArray = data;
+        buildTable(myArray);
+        console.log(myArray)
+      })
       .catch(e => {
           console.log(e);
       });
       //pulisce la form
       document.getElementById("addTutor").reset();
     }
-
-    // FUNZIONE PER ELIMINARE UN TUTOR 
-    async function deleteTutor(){
-      const id = document.getElementById("idTutor").value
-      //opzioni per la fetch
-      const options = {
-        method: 'DELETE'
-      };
-      //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ id, options)
-      .then((response) => {
-        if (response.ok) {
-          alert("Tutor eliminato!");
-          return response.json();
-        }
-        alert('ERROR '+ response.status +'! Something went wrong!');
-        //invio al client la risposta sotto formato json
-        response.json();
-      })
-      .catch(e => {
-          console.log(e);
-      });
-      //pulisce la form
-      document.getElementById("deleteTutor").reset();
-    }
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      const searchValue = document.getElementById("searchValue").value;
-      console.log(searchValue);
-      console.log(localStorage.filtro);
-      
-      if(!searchValue){
-        alert("Inserire uno tutor.");
-        return;
-      }
-      
+      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
+
       //opzioni per la fetch
       const options = {
         method: 'GET',
@@ -251,15 +207,20 @@
       };
       
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+ localStorage.filtro+"/"+ searchValue, options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
       .then((response) => {
         if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          myArray = response.json();
-          buildTable(myArray);
+          alert("La ricerca ha prodotto risultati!");
           return response.json();
         }
-        alert('ERROR '+ response.status +'!Something went wrong!');
+        alert('ERROR!Something went wrong!');
+      })
+      .then(data =>{
+        if(data != 0){
+          myArray = data;
+          console.log(myArray);
+          buildTable(myArray);
+        }
       })
       .catch(e => {
           console.log(e);
@@ -267,7 +228,66 @@
       //pulisce la form
       document.getElementById("searchTutor").reset();
     }
-  
+    
+    function setFilter(value){
+      sessionStorage.setItem("filter", value);
+    }
+    
+    function setSearchValue(){
+      sessionStorage.setItem("searchValue",document.getElementById("searchValue").value );
+    }
+
+    function buildTable(data){
+      var table = document.getElementById('myTable')
+      $("#myTable").empty();
+
+      for (var i = 0; i < data.length; i++){
+        var row = `<tr>
+                <td>${data[i].id}</td>
+                <td>${data[i].name}</td>
+                <td>${data[i].surname}</td>
+                <td>${data[i].email}</td>
+                <td>${data[i].universita}</td>
+                <td>${data[i].corso}</td>
+                <td><button type="button" value = ${i} id="showExams" onclick="displayExams(myArray[this.value])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+              </tr>`
+        table.innerHTML += row;
+      }
+    }
+    
+    // FUNZIONE PER ELIMINARE UN TUTOR 
+    async function deleteTutor(idTutor){
+      sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
+      //opzioni per la fetch
+      const options = {
+        method: 'DELETE'
+      };
+      console.log(sessionStorage.idTutor);
+      //eseguo la fetch
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/deleteTutor/'+ sessionStorage.idTutor, options)
+      .then((response) => {
+        if (response.ok) {
+          alert("Tutor eliminato!");
+          return response.json();
+        }
+        alert('ERROR '+ response.status +'! Id inserito non esiste!');
+        //invio al client la risposta sotto formato json
+        response.json();
+      })
+      .then(data =>{
+        if(data != 0){
+          myArray = data;
+          console.log(myArray);
+          buildTable(myArray);
+        }
+      })
+      .catch(e => {
+          console.log(e);
+      });
+      //pulisce la form
+      document.getElementById("deleteTutor").reset();
+    }
+    
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       //definisco i vali paramentri da passare all'api
@@ -290,6 +310,13 @@
         //invio al client la risposta sotto formato json
         response.json();
       })
+      .then(data =>{
+        if(data > 0){
+          myArray = data;
+          console.log(myArray);
+        }
+        buildTable(myArray);
+      })
       .catch(e => {
           console.log(e);
       });
@@ -304,8 +331,32 @@
       document.getElementById("updateTutor").reset();
     }
     
-  </script>
+    function displayExams(element){
+      if(element.esami.length != 0){
+        alert(element.esami);
+      }
+      else{
+        alert("Nessun esame inserito!");
+      }
+    }
+    
+    function setExamFilter(){
+      sessionStorage.setItem("filtroEsame", !filtroEsame);
+      sessionStorage.setItem("action", "newExam");
+    }
+    
+    function setEmailFilter(){
+      sessionStorage.setItem("filtroEmail", !filtroEmail);
+      sessionStorage.setItem("action", "newEmail");
+    }
+    
+    $('button').on('click', function(){
+      $('button').removeClass('selected');
+      $(this).addClass('selected');
+});
 
+  </script>
+  
   <! LISTA UNIVERSITA' PER AGGIUNGERE UN NUOVO TUTOR >
   <datalist id="nome-università">
     <!Università delle Marche>
@@ -365,5 +416,5 @@
     <!Università della Puglia>
 
   </datalist>
-  
 </html>
+    
